[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8", features=["hydrate", "suspense", "ssr"] }
reqwasm = "0.5"
serde = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "Headers",
    "HtmlDocument",
    "HtmlElement",
    "Location",
    "MessageEvent",
    "Node",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Response",
    "Text",
    "Url",
    "Window",
    "Worker",
]